# QtCalculator

./: ..gitignore.un~  .calculator.h.swp  .gitignore  .main.cpp.swp  CMakeLists.txt  Makefile  Project3  Project3.pro  calculator.cpp  calculator.h  main.cpp  moc_calculator.cpp
